// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an iframe 1`] = `
<PreviewFrame
  content="<h1>Hello, World!</h1>"
>
  <iframe
    className="PreviewFrame"
    onLoad={[Function]}
    sandbox="allow-same-origin allow-top-navigation"
    title="preview email template frame"
  />
</PreviewFrame>
`;

exports[`sets iframe height after it loads 1`] = `
<PreviewFrame
  content="<h1>Hello, World!</h1>"
>
  <iframe
    className="PreviewFrame"
    height="99px"
    onLoad={[Function]}
    sandbox="allow-same-origin allow-top-navigation"
    title="preview email template frame"
  />
</PreviewFrame>
`;
